Fix habit date highlight border clipping

--- a/public/style.css
+++ b/public/style.css
@@ -2151,6 +2151,7 @@ body::before {
   width: 100%;
   aspect-ratio: 1 / 1;
   min-width: 0;
+  box-sizing: border-box;
   border-radius: 0.3rem;
   display: flex;
   align-items: center;
@@ -2195,7 +2196,7 @@ body::before {
 }
 
 .hm-day-cell.hm-today {
-  box-shadow: 0 0 0 1.5px rgb(var(--ac-500));
+  box-shadow: inset 0 0 0 2px rgb(var(--ac-500));
 }
 
 .hm-day-cell.hm-done .hm-day-num {
@@ -2451,7 +2452,7 @@ body::before {
 }
 
 .hm-cell.hm-today {
-  box-shadow: 0 0 0 1.5px rgb(var(--ac-500));
+  box-shadow: inset 0 0 0 2px rgb(var(--ac-500));
 }
 
 .hm-cell:hover:not(.hm-empty):not(.hm-future) {
@@ -2692,7 +2693,7 @@ body::before {
 }
 
 .heatmap-cell.today {
-  box-shadow: 0 0 0 2px rgb(var(--ac-500));
+  box-shadow: inset 0 0 0 2px rgb(var(--ac-500));
 }
 
 .heatmap-cell.future {
